--- a/hello-world.html
+++ b/hello-world.html
@@ -11,19 +11,19 @@
 	font-size: xx-large;
 	font-weight: bold;
 	background-color: #ff00e9;
-	border-radius: 4px;
-	padding: 10px;
+	border-radius: 1px;
+	padding: 15px;
 	text-align: center;
 }
 .buttonStyle {
-	border-radius: 4px;
+	border-radius: 1px;
 	border: thin solid #F0E020;
 	padding: 5px;
 	background-color: #F8F094;
 	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 	font-weight: bold;
 	color: #663300;
-	width: 75px;
+	width: 200px;
 }
 
 .buttonStyle:hover {
@@ -51,7 +51,7 @@
 var myButton = document.getElementById("clickButton");
 var myText = document.getElementById("helloText");
 
-myButton.addEventListener('click', doSomething, false)
+myButton.addEventListener('click', doSomething, false);
 
 function doSomething() {
 	myText.textContent = "Hello, World! Did it work? Doubt  it";
