--- a/hello-world.html
+++ b/hello-world.html
@@ -22,19 +22,19 @@
 	background-color: #F8F094;
 	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 	font-weight: bold;
-	color: #663300;
+	color: #5aa8a5;
 	width: 200px;
 }
 
 .buttonStyle:hover {
 	border: thin solid #FFCC00;
-	background-color: #FCF9D6;
+	background-color: #4cff00;
 	color: #996633;
 	cursor: pointer;
 }
 .buttonStyle:active {
 	border: thin solid #99CC00;
-	background-color: #F5FFD2;
+	background-color: #ff0000;
 	color: #669900;
 	cursor: pointer;
 }
