--- a/hello-world.html
+++ b/hello-world.html
@@ -19,23 +19,23 @@
 	border-radius: 30px;
 	border: thin solid #F0E020;
 	padding: 245px;
-	background-color: #F8F094;
+	background-color: #6a00ff;
 	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 	font-weight: bold;
-	color: #5aa8a5;
+	color: #000000;
 	width: 200px;
 }
 
 .buttonStyle:hover {
 	border: thin solid #FFCC00;
 	background-color: #4cff00;
-	color: #996633;
+	color: #000000;
 	cursor: pointer;
 }
 .buttonStyle:active {
 	border: thin solid #99CC00;
 	background-color: #ff0000;
-	color: #669900;
+	color: #000000;
 	cursor: pointer;
 }
 
