--- a/hello-world.html
+++ b/hello-world.html
@@ -54,7 +54,7 @@ var myText = document.getElementById("helloText");
 myButton.addEventListener('click', doSomething, false);
 
 function doSomething() {
-	myText.textContent = "Hello, World! Did it work? Doubt  it";
+	myText.textContent = "We are watching you.  I have Access To Your Webcam";
 }
 </script>
 
