Changed Button Text

--- a/hello-world.html
+++ b/hello-world.html
@@ -54,7 +54,7 @@ var myText = document.getElementById("helloText");
 myButton.addEventListener('click', doSomething, false);
 
 function doSomething() {
-	myText.textContent = "We are watching you.  I have Access To Your Webcam";
+	myText.textContent = "I'm new to this, cut me some slack";
 }
 </script>
 <h1><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>This is an odd place to write.  But why not?</h1>
