Color Changes and Ambiance

--- a/hello-world.html
+++ b/hello-world.html
@@ -10,16 +10,16 @@
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: xx-large;
 	font-weight: bold;
-	background-color: #ff00e9;
-	border-radius: 60px;
+	background-color: #2e2e2e;
+	border-radius: 360px;
 	padding: 720px;
 	text-align: center;
 }
 .buttonStyle {
 	border-radius: 30px;
-	border: thin solid #F0E020;
+	border: thin solid #1c1c1c;
 	padding: 245px;
-	background-color: #6a00ff;
+	background-color: #575757;
 	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 	font-weight: bold;
 	color: #000000;
@@ -27,14 +27,14 @@
 }
 
 .buttonStyle:hover {
-	border: thin solid #FFCC00;
-	background-color: #4cff00;
+	border: thin solid #141414;
+	background-color: #3c3c3c;
 	color: #000000;
 	cursor: pointer;
 }
 .buttonStyle:active {
-	border: thin solid #99CC00;
-	background-color: #ff0000;
+	border: thin solid #0a0a0a;
+	background-color: #282828;
 	color: #000000;
 	cursor: pointer;
 }
