--- a/aboutme.html
+++ b/aboutme.html
@@ -10,6 +10,7 @@
   </li>
   <li class="nav-item">
     <a class="nav link" href="#about-me">About Me</a>
+  </li>
   <li class="nav-item">
     <a class="nav-link" href="#resume">Resume</a>
   </li>
@@ -22,5 +23,6 @@
 </ul>
   </head>
   <body>
+      <h1>Death</h1>
   </body>
 </html>
