I have the header and footer done.

--- a/index.html
+++ b/index.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <!-- "This is it" -->
-<html lang="en-us">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <head>
-    <title>Jonathan Pellior</title>
-    <ul class="nav nav-pills nav-right">
-  <li class="nav-item">
-    <a class="nav-link active" href="#home">Home</a>
+ <title>Jonathan Pellior's Portfolio</title>
+ <html lang="en-us">
+ <header class="jumbotron">
+   <h3 class="col-sm-3 pull-left">Jonathan Pellior</h3>
+    <ul class="nav nav-pills pull-right">
   </li>
   <li class="nav-item">
-    <a class="nav link" href="#about-me">About Me</a>
-  <li class="nav-item">
-    <a class="nav-link" href="#resume">Resume</a>
+    <a class="nav-link active" href="https://my-portfolio-inusion.c9users.io/index.html#about-me">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#projects">Projects</a>
+    <a class="nav link" href="https://my-portfolio-inusion.c9users.io/aboutme.html#about-me">About Me</a>
+  <li class="nav-item">
+    <a class="nav-link" href="https://my-portfolio-inusion.c9users.io/resume.html#resume">Resume</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link disabled" href="#contact-me">Contact Me</a>
+    <a class="nav-link" href="https://my-portfolio-inusion.c9users.io/projects.html#projects">Projects</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled" href="https://my-portfolio-inusion.c9users.io/contactme.html#contact-me">Contact Me</a>
   </li>
 </ul>
-  </head>
+  </header>
   <body>
   </body>
+  <footer class="container">
+    <div class="row pull-right">
+      <p>Palm Desert High School</p>
+    </div>
+  </footer>
 </html>
