--- a/aboutme.html
+++ b/aboutme.html
@@ -3,6 +3,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
  <title>Jonathan Pellior's Portfolio</title>
  <html lang="en-us">
+<!--This is the Header-->
  <header class="jumbotron">
    <h3 class="col-sm-3 pull-left">Jonathan Pellior</h3>
     <ul class="nav nav-pills pull-right">
@@ -23,9 +24,17 @@
   </li>
 </ul>
   </header>
+<!--"This is where the real stuff goes down..."-->  
   <body>
+    <h3 class="death">Everything you will need to know about me:</h3>
+    <p></p>
   </body>
+<!--This is the Footer-->
   <footer class="container">
+    <div class="row pull-left">
+      <img src="https://www.google.com/imgres?imgurl=https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/New_Logo_Gmail.svg/1014px-New_Logo_Gmail.svg.png&imgrefurl=https://commons.wikimedia.org/wiki/File:New_Logo_Gmail.svg&h=768&w=1014&tbnid=HzHY2q6zZ1IPCM:&q=gmail&tbnh=151&tbnw=199&usg=AI4_-kQJCk81tLycOLxDBfDTYN8qTxuROw&vet=1&docid=VU16gnGLPAljTM&itg=1&sa=X&ved=2ahUKEwilt86VtYHeAhXkzVQKHX2sCBoQ_B0wFXoECAcQCQ"
+      alt="Gmail">
+    </div>
     <div class="row pull-right">
       <p>Palm Desert High School</p>
     </div>
