I have added a few pictures, and am currently trying to fix the container element...

--- a/aboutme.html
+++ b/aboutme.html
@@ -5,11 +5,11 @@
  <html lang="en-us">
 <!--This is the Header-->
  <header class="jumbotron">
-   <h3 class="col-sm-3 pull-left">Jonathan Pellior</h3>
+   <h3 class="col-sm-3 pull-left death">Jonathan Pellior</h3>
     <ul class="nav nav-pills pull-right">
   </li>
   <li class="nav-item">
-    <a class="nav-link active" href="https://my-portfolio-inusion.c9users.io/index.html#about-me">Home</a>
+    <a class="nav-link active" href="https://my-portfolio-inusion.c9users.io/home.html#home">Home</a>
   </li>
   <li class="nav-item">
     <a class="nav link" href="https://my-portfolio-inusion.c9users.io/aboutme.html#about-me">About Me</a>
@@ -25,15 +25,14 @@
 </ul>
   </header>
 <!--"This is where the real stuff goes down..."-->  
-  <body>
+  <body class="container">
     <h3 class="death">Everything you will need to know about me:</h3>
-    <p></p>
+    <p>Hello, my full name is Jonathan Michael Pellior Jr.  I hope to go into digital design, game design, and I hope to one day work for Wizards of the Coast.  </p>
   </body>
 <!--This is the Footer-->
   <footer class="container">
     <div class="row pull-left">
-      <img src="https://www.google.com/imgres?imgurl=https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/New_Logo_Gmail.svg/1014px-New_Logo_Gmail.svg.png&imgrefurl=https://commons.wikimedia.org/wiki/File:New_Logo_Gmail.svg&h=768&w=1014&tbnid=HzHY2q6zZ1IPCM:&q=gmail&tbnh=151&tbnw=199&usg=AI4_-kQJCk81tLycOLxDBfDTYN8qTxuROw&vet=1&docid=VU16gnGLPAljTM&itg=1&sa=X&ved=2ahUKEwilt86VtYHeAhXkzVQKHX2sCBoQ_B0wFXoECAcQCQ"
-      alt="Gmail">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/New_Logo_Gmail.svg/45px-New_Logo_Gmail.svg.png" href="https://mail.google.com" alt="Gmail">
     </div>
     <div class="row pull-right">
       <p>Palm Desert High School</p>
