--- a/home.html
+++ b/home.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <!-- "This is it" -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="style.css">
  <title>Jonathan Pellior's Portfolio</title>
  <html lang="en-us">
+<!--This is the Header-->
  <header class="jumbotron">
-   <h3 class="col-sm-3 pull-left">Jonathan Pellior</h3>
+   <h3 class="col-sm-3 pull-left death">Jonathan Pellior</h3>
     <ul class="nav nav-pills pull-right">
   </li>
   <li class="nav-item">
-    <a class="nav-link active" href="https://my-portfolio-inusion.c9users.io/index.html#about-me">Home</a>
+    <a class="nav-link active" href="https://my-portfolio-inusion.c9users.io/home.html#home">Home</a>
   </li>
   <li class="nav-item">
     <a class="nav link" href="https://my-portfolio-inusion.c9users.io/aboutme.html#about-me">About Me</a>
@@ -23,9 +25,19 @@
   </li>
 </ul>
   </header>
-  <body>
+<!--"This is where the real stuff goes down..."-->  
+  <body class="container">
+    <div class="row">
+      <img src="https://img-aws.ehowcdn.com/600x600p/photos.demandstudios.com/getty/article/41/182/78455648.jpg" alt="An adorable Chocolate Labrador" class="col-4">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTWu3ah6ZHpiWenuz7XUjvw94j53sNxRJldrOx-RxyjAL4LneI" alt="Dungeons & Dragons" class="col-8">
+      <img src="" alt="" class="col-12">
+    </div>
   </body>
+<!--This is the Footer-->
   <footer class="container">
+    <div class="row pull-left">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/New_Logo_Gmail.svg/45px-New_Logo_Gmail.svg.png" href="https://mail.google.com" alt="Gmail">
+    </div>
     <div class="row pull-right">
       <p>Palm Desert High School</p>
     </div>
