--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <ul class="nav nav-pills pull-right">
   </li>
   <li class="nav-item">
-    <a class="nav-link active" href="https://my-portfolio-inusion.c9users.io/home.html#home">Home</a>
+    <a class="nav-link active" href="https://inusion.github.io/home.html#home">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav link" href="https://my-portfolio-inusion.c9users.io/aboutme.html#about-me">About Me</a>
+    <a class="nav link" href="https://inusion.github.io/aboutme.html#about-me">About Me</a>
   <li class="nav-item">
-    <a class="nav-link" href="https://my-portfolio-inusion.c9users.io/resume.html#resume">Resume</a>
+    <a class="nav-link" href="https://inusion.github.io/resume.html#resume">Resume</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="https://my-portfolio-inusion.c9users.io/projects.html#projects">Projects</a>
+    <a class="nav-link" href="https://inusion.github.io/projects.html#projects">Projects</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link disabled" href="https://my-portfolio-inusion.c9users.io/contactme.html#contact-me">Contact Me</a>
+    <a class="nav-link disabled" href="https://inusion.github.io/contactme.html#contact-me">Contact Me</a>
   </li>
 </ul>
   </header>
