I changed the index.html

--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
  <header class="jumbotron">
    <h3 class="col-sm-3 pull-left death">Jonathan Pellior</h3>
     <ul class="nav nav-pills pull-right">
+  <li class="nav-item">
+    <a class="nav-link active" href="https://inusion.github.io/index.html#home">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link active" href="https://inusion.github.io/home.html#home">Home</a>
+    <a class="nav link active" href="aboutme.html">About Me</a>
   </li>
   <li class="nav-item">
-    <a class="nav link" href="https://inusion.github.io/aboutme.html#about-me">About Me</a>
-  <li class="nav-item">
-    <a class="nav-link" href="https://inusion.github.io/resume.html#resume">Resume</a>
+    <a class="nav-link active" href="resume.html">Resume</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="https://inusion.github.io/projects.html#projects">Projects</a>
+    <a class="nav-link" href="projects.html">Projects</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link disabled" href="https://inusion.github.io/contactme.html#contact-me">Contact Me</a>
+    <a class="nav-link disabled" href="contactme.html">Contact Me</a>
   </li>
 </ul>
   </header>
