--- a/contactme.html
+++ b/contactme.html
@@ -9,7 +9,7 @@
     <ul class="nav nav-pills pull-right">
   </li>
   <li class="nav-item">
-    <a class="nav-link active" href="https://inusion.github.io/index.html#home">Home</a>
+    <a class="nav-link active" href="index.html">Home</a>
   </li>
   <li class="nav-item">
     <a class="nav link" href="aboutme.html">About Me</a>
