--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
  <title>Jonathan Pellior's Portfolio</title>
  <html lang="en-us">
 <!--This is the Header-->
- <header class="jumbotron">
+ <header class="container">
    <h3 class="col-sm-3 pull-left death">Jonathan Pellior</h3>
     <ul class="nav nav-pills pull-right">
   <li class="nav-item">
-    <a class="nav-link active" href="https://inusion.github.io/index.html#home">Home</a>
+    <a class="nav-link active" href="index.html">Home</a>
   </li>
   <li class="nav-item">
     <a class="nav link active" href="aboutme.html">About Me</a>
