--- a/aboutme.html
+++ b/aboutme.html
@@ -4,38 +4,46 @@
  <title>Jonathan Pellior's Portfolio</title>
  <html lang="en-us">
 <!--This is the Header-->
- <header class="jumbotron">
-   <h3 class="col-sm-3 pull-left death">Jonathan Pellior</h3>
-    <ul class="nav nav-pills pull-right">
-  </li>
-  <li class="nav-item">
-    <a class="nav-link active" href="index.html">Home</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav link" href="aboutme.html">About Me</a>
-  <li class="nav-item">
-    <a class="nav-link" href="resume.html">Resume</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="projects.html">Projects</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link disabled" href="contactme.html">Contact Me</a>
-  </li>
-</ul>
-  </header>
+ <section>
+   <header class="row container">
+     <h3 class="col-sm-3 pull-left death">Jonathan Pellior</h3>
+      <ul class="nav nav-pills pull-right">
+    <li class="nav-item">
+      <a class="nav-link active" href="index.html">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav link" href="aboutme.html">About Me</a>
+    <li class="nav-item">
+      <a class="nav-link" href="resume.html">Resume</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="projects.html">Projects</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled" href="contactme.html">Contact Me</a>
+    </li>
+  </ul>
+    </header>
+  </section>
 <!--"This is where the real stuff goes down..."-->  
-  <body class="container">
-    <h3 class="death">Everything you will need to know about me:</h3>
-    <p>Hello, my full name is Jonathan Michael Pellior Jr.  I hope to go into digital design, game design, and I hope to one day work for Wizards of the Coast.  </p>
-  </body>
+  <section>
+    <body class="row">
+      <h3 class="row death pull-left">Everything you will need to know about me:</h3>
+      <br><br><br><br>
+      <img src="https://img-aws.ehowcdn.com/600x600p/photos.demandstudios.com/getty/article/41/182/78455648.jpg" alt="An adorable Chocolate Labrador" class="row col-sm-4">
+      <p class="col-sm-8">Hello, my full name is Jonathan Michael Pellior Jr.  I hope to go into digital design, game design, and I hope to one day work for Wizards of the Coast. TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT</p>
+    </body>
+      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+  </section>
 <!--This is the Footer-->
-  <footer class="container">
-    <div class="row pull-left">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/New_Logo_Gmail.svg/45px-New_Logo_Gmail.svg.png" href="https://mail.google.com" alt="Gmail">
-    </div>
-    <div class="row pull-right">
-      <p>Palm Desert High School</p>
-    </div>
+  <section>
+    <footer class="row pull left">
+      <div class="row pull-left">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/New_Logo_Gmail.svg/45px-New_Logo_Gmail.svg.png" href="https://mail.google.com" alt="Gmail">
+      </div>
+      <div class="row pull-right">
+        <p>Palm Desert High School</p>
+      </div>
   </footer>
+  </section>
 </html>
