I have changed alot, but most importantly is the change from 'header' to 'head' and same for 'footer' to 'foot' I also added a download to my APK file, and a link to my gmail, as well as a table in I for index.html  Alot has changed, and more yet is to be added.

--- a/contactme.html
+++ b/contactme.html
@@ -4,8 +4,8 @@
  <title>Jonathan Pellior's Portfolio</title>
  <html lang="en-us">
 <!--This is the Header-->
- <header>
-   <h3 class="col-sm-3 pull-left death">Jonathan Pellior</h3>
+ <head>
+   <h3 class="col-sm-3 pull-left">Jonathan Pellior</h3>
     <ul class="nav nav-pills pull-right">
   </li>
   <li class="nav-item">
@@ -23,17 +23,22 @@
     <a class="nav-link disabled" href="contactme.html">Contact Me</a>
   </li>
 </ul>
-  </header>
+  </head>
 <!--"This is where the real stuff goes down..."-->  
   <body class="container">
+    <br>
+    <br>
+    <br>
+    <h4>My Contact Information:</h4>
+    <p>Email: <a href="https://mail.google.com/mail/u/0/#inbox?">Jonathan.Pellior@myds.us</a></p>
   </body>
 <!--This is the Footer-->
-  <footer class="container">
+  <foot class="container">
     <div class="row pull-left">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/New_Logo_Gmail.svg/45px-New_Logo_Gmail.svg.png" href="https://mail.google.com" alt="Gmail">
     </div>
     <div class="row pull-right">
       <p>Palm Desert High School</p>
     </div>
-  </footer>
+  </foot>
 </html>
