--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <title>Jonathan Pellior's Portfolio</title>
  <html lang="en-us">
 <!--This is the Header-->
- <header class="container">
+ <head class="container">
    <h3 class="col-sm-3 pull-left death">Jonathan Pellior</h3>
     <ul class="nav nav-pills pull-right">
   <li class="nav-item">
@@ -24,22 +24,29 @@
     <a class="nav-link disabled" href="contactme.html">Contact Me</a>
   </li>
 </ul>
-  </header>
+  </head>
 <!--"This is where the real stuff goes down..."-->  
   <body class="container">
-    <div class="row">
-      <img src="https://img-aws.ehowcdn.com/600x600p/photos.demandstudios.com/getty/article/41/182/78455648.jpg" alt="An adorable Chocolate Labrador" class="col-4">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTWu3ah6ZHpiWenuz7XUjvw94j53sNxRJldrOx-RxyjAL4LneI" alt="Dungeons & Dragons" class="col-8">
-      <img src="" alt="" class="col-12">
-    </div>
+    <table>
+      <tr>
+        <td><img src="https://img-aws.ehowcdn.com/300x300p/photos.demandstudios.com/getty/article/41/182/78455648.jpg" alt="An adorable Chocolate Labrador" class="col-4"></td>
+        <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTWu3ah6ZHpiWenuz7XUjvw94j53sNxRJldrOx-RxyjAL4LneI" alt="Dungeons & Dragons" class="col-8"></td>
+        <td><img src="https://www.brooksrunning.com/dw/image/v2/aaev_prd/on/demandware.static/-/Sites-BrooksCatalog/default/dwba2f9147/images/ProductImages/110269/110269_004_l_WR.jpg?sw=640" alt="A Brooks Brand Name Shoe" class="col-12"></td>
+      </tr>
+      <tr>
+        <th>Dogs Are Amazing</th>
+        <th>Dungeons & Dragons is the best TTRPG Ever</th>
+        <th>I Run For Life</th>
+      </tr>
+    </table>
   </body>
 <!--This is the Footer-->
-  <footer class="container">
+  <foot class="container">
     <div class="row pull-left">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/New_Logo_Gmail.svg/45px-New_Logo_Gmail.svg.png" href="https://mail.google.com" alt="Gmail">
     </div>
     <div class="row pull-right">
       <p>Palm Desert High School</p>
     </div>
-  </footer>
+  </foot>
 </html>
