--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
  <title>Jonathan Pellior's Portfolio</title>
  <html lang="en-us">
 <!--This is the Header-->
- <header>
+ <head>
    <h3 class="col-sm-3 pull-left death">Jonathan Pellior</h3>
     <ul class="nav nav-pills pull-right">
   </li>
@@ -23,17 +23,23 @@
     <a class="nav-link disabled" href="contactme.html">Contact Me</a>
   </li>
 </ul>
-  </header>
+  </head>
 <!--"This is where the real stuff goes down..."-->  
   <body class="container">
+    <br>
+    <br>
+    <br>
+    <h4>My Projects:</h4>
+    <p>Download Link: <a href="/Cooki3 Cl1ck3r Hybrid.apk" download="MyFirstApp.apk">Suspisious Link</a></p>
+    <p>This was my first app that I ever made, it was a recreation of Cookie Clicker, but made to look as bland as possible, in the most boring font, and the most dissappointing layout.</p>
   </body>
 <!--This is the Footer-->
-  <footer class="container">
+  <foot class="container">
     <div class="row pull-left">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/New_Logo_Gmail.svg/45px-New_Logo_Gmail.svg.png" href="https://mail.google.com" alt="Gmail">
     </div>
     <div class="row pull-right">
       <p>Palm Desert High School</p>
     </div>
-  </footer>
+  </foot>
 </html>
