--- a/project2.html
+++ b/project2.html
@@ -5,7 +5,7 @@
  <html lang="en-us">
 <!--This is the Header-->
  <head>
-   <h3 class="col-sm-3 pull-left death">Jonathan Pellior</h3>
+   <h3 class="col-sm-3 pull-left">Jonathan Pellior</h3>
     <ul class="nav nav-pills pull-right">
   </li>
   <li class="nav-item">
@@ -22,9 +22,6 @@
   <li class="nav-item">
     <a class="nav-link disabled" href="contactme.html">Contact Me</a>
   </li>
-  <li class="nav-item">
-    <a class="nav-link disabled" href="textadventure.html">TextAdventure1.0</a>
-  </li>
 </ul>
   </head>
 <!--"This is where the real stuff goes down..."-->  
@@ -33,8 +30,8 @@
     <br>
     <br>
     <h4>My Projects:</h4>
-    <p>Download Link: <a href="TextAdventure10.zip">Suspisious Link</a></p>
-    <p>This was my first app that I ever made, it was a recreation of Cookie Clicker, but made to look as bland as possible, in the most boring font, and in the most dissappointing layout.</p>
+    <p>Download Link: <a href="" download="">Suspisious Link</a></p>
+    <p>This was my first Text Adventure Game I've Ever Made!!!!!!!</p>
   </body>
 <!--This is the Footer-->
   <foot class="container">
