--- a/aboutme.html
+++ b/aboutme.html
@@ -23,6 +23,9 @@
   <li class="nav-item">
     <a class="nav-link disabled" href="contactme.html">Contact Me</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link disabled" href="blank2.html">Text Adventure</a>
+  </li>
 </ul>
   </head>
 <!--"This is where the real stuff goes down..."-->  
