--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   <li class="nav-item">
     <a class="nav-link disabled" href="contactme.html">Contact Me</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link disabled" href="blank2.html">Text Adventure</a>
+  </li>
 </ul>
   </head>
 <!--"This is where the real stuff goes down..."-->  
@@ -39,6 +42,17 @@
         <th>I Run For Life</th>
       </tr>
     </table>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <button type="button" onclick="document.getElementById('ptext').innerHTML = 'Monkey'">Click Me</button>
+    <p id="ptext">This is about to change</p>
+
   </body>
 <!--This is the Footer-->
   <foot class="container">
