--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,9 @@
   <li class="nav-item">
     <a class="nav-link disabled" href="textadventure.html">TextAdventure1.0</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link disabled" href="blank2.html">Text Adventure</a>
+  </li>
 </ul>
   </head>
 <!--"This is where the real stuff goes down..."-->  
