--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <a class="nav-link disabled" href="contactme.html">Contact Me</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link disabled" href="blank2.html">Text Adventure</a>
+    <a class="nav-link disabled" href="JavaTxtAdventure.html">Text Adventure</a>
   </li>
 </ul>
   </head>
