--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
     <a class="nav-link disabled" href="textadventure.html">TextAdventure1.0</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link disabled" href="blank2.html">Text Adventure</a>
+    <a class="nav-link disabled" href="JavaTxtAdventure.html">Text Adventure</a>
   </li>
 </ul>
   </head>
