--- a/projects.html
+++ b/projects.html
@@ -36,8 +36,10 @@
     <br>
     <br>
     <h4>My Projects:</h4>
-    <p>Download Link: <a href="TextAdventure10.zip">Suspisious Link</a></p>
+    <p>Download Link: <a href="/projects/TextAdventure10.zip">Suspisious Link</a></p>
     <p>This was my first app that I ever made, it was a recreation of Cookie Clicker, but made to look as bland as possible, in the most boring font, and in the most dissappointing layout.</p>
+    <p>Download Link For BlackJackLeetSauce: <a href="/projects/BlackJackLeetSauce.zip">BlackJackLeetSauce</a></p>
+    <p></p>
   </body>
 <!--This is the Footer-->
   <foot class="container">
