I added the written response, the video, and the video narrative to the projects section.

--- a/projects.html
+++ b/projects.html
@@ -29,6 +29,12 @@
     <a class="nav-link disabled" href="JavaTxtAdventure.html">Text Adventure</a>
   </li>
 </ul>
+<style>
+  #video {
+    height: 300px;
+    width: 500px;
+  }
+</style>
   </head>
 <!--"This is where the real stuff goes down..."-->  
   <body class="container">
@@ -39,7 +45,9 @@
     <p>Download Link: <a href="/projects/TextAdventure10.zip">Suspisious Link</a></p>
     <p>This was my first app that I ever made, it was a recreation of Cookie Clicker, but made to look as bland as possible, in the most boring font, and in the most dissappointing layout.</p>
     <p>Download Link For BlackJackLeetSauce: <a href="/projects/BlackJackLeetSauce.zip">BlackJackLeetSauce</a></p>
-    <p></p>
+    <p>In BlackJackLeetSauce, our Python version of a normal game of Black Jack, you will notice how you are given options from the start menu on what to do.  I type *play* and it obliges and starts the game.  It prompts you on what you would like to bet (Budget of 500$ to start).  Thereafter, it states the cards on the field, and you would play like normal Black Jack.  In later updates/versions of BlackJackLeetSauce we will be adding the *split* and *double* features.</p>
+    <video id="video" src="/projects/rim.mp4">Video Does not appear to work...</video>
+    <p>When we first tried to tackle this project on simulating Black Jack, we enncountered many errors, and problems.  One such problem was trying to get the game to function as real cards move throughout a deck of cards.  We decided to create a variable equal to each individual card in a list, and have each card be equal to two values, it's number and suit and it's value in the game itself.  We would then choose cards at random y index from the deck and delete them from the deck to never be played again.  This was a grueling painful proces to figure out, but once we had it figured out, all we needed to do was add plenty of functions and if-statements checking the progression of the game.  Later on we decided to add the betting function, where you would actually bet money on each match, which wasn't too difficult, but it made us have to consider more specific options on determining the winner, whether it is the dealer or the player.  All in all, the program works decently well, and we've encountered many errors and hardships along the way (and still are, don't get me worked up on the aces). </p>
   </body>
 <!--This is the Footer-->
   <foot class="container">
