--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
   <li class="nav-item">
     <a class="nav-link disabled" href="JavaTxtAdventure.html">Text Adventure</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link disabled" href="Arduino.html">Arduino</a>
 </ul>
   </head>
 <!--"This is where the real stuff goes down..."-->  
